--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <div id="nav" class="lexend-600">
-  <img src="https://www.collegetips.in/images/logo.jpg" alt="collegetips" />
+  <img src="logo.webp" alt="collegetips" />
 
   <!-- Hamburger Icon -->
   <div id="hamburger" onclick="toggleMenu()">☰</div>
